# rules_pydeps

./: .bazelignore  .gitignore  MODULE.bazel  readme.md
.bcr/: metadata.template.json
.github/: CODEOWNERS  renovate.json  reviewers.json
.github/workflows/: automation-autosquash.yml  automation-reviewbot.yml  automation-update-requirements.yml  ci.yml  release.yml  release_prep.sh
examples/demo/: .bazelrc  MODULE.bazel  aspects.bzl
examples/demo/thm/a/: BUILD.bazel
examples/demo/thm/b/: BUILD.bazel
pydeps/: BUILD.bazel  pydeps.bzl  reqs.bzl
pydeps/private/: BUILD.bazel  requirements.in  requirements.txt
pydeps/private/bazel/: BUILD.bazel  external_deps.py  requirement.py  targets.py
pydeps/private/enforcer/: BUILD.bazel  deps_cli.py  enforcer.bzl
pydeps/private/index/: BUILD.bazel  deps_index.bzl  index.py  reqs.bzl
pydeps/private/index/templates/: BUILD.bazel.template  pins.bzl.template
pydeps/private/py/: BUILD.bazel  python_module.py  python_source.py  source_files.py  test_python_module.py  test_python_source.py  test_source_files.py
pydeps/private/pytest/: BUILD.bazel  pytest.bzl  runner.py
