load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@python_versions//3.12:defs.bzl", py_312_binary = "py_binary")
load("@rules_pydeps_pip//:requirements.bzl", "requirement")

py_312_binary(
    name = "deps_cli",
    srcs = glob(
        include = ["*.py"],
        exclude = ["test_*.py"],
    ),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//pydeps/private/bazel",
        "//pydeps/private/py",
        requirement("click"),
    ],
)

bzl_library(
    name = "enforcer",
    srcs = ["enforcer.bzl"],
    visibility = ["//pydeps:__subpackages__"],
)
