load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@python_versions//3.12:defs.bzl", py_312_binary = "py_binary")
load("@rules_pydeps_pip//:requirements.bzl", "requirement")

exports_files(glob(include = ["templates/*.template"]))

py_312_binary(
    name = "index",
    srcs = glob(
        include = ["*.py"],
        exclude = ["test_*.py"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//pydeps/private/py",
        requirement("click"),
    ],
)

bzl_library(
    name = "deps_index",
    srcs = ["deps_index.bzl"],
    visibility = ["//pydeps:__subpackages__"],
)

bzl_library(
    name = "reqs",
    srcs = ["reqs.bzl"],
    visibility = ["//pydeps:__subpackages__"],
)
