load("@python_versions//3.12:defs.bzl", py_312_binary = "py_binary")
load("@rules_pydeps_pip//:requirements.bzl", "requirement")
load("//pydeps/private/pytest:pytest.bzl", "pytest_test")

# TODO: rules_python doesn't offer a Python 3.12 py_library, and we
# need to pin the version to match rules_pydeps_pip's library version.
py_312_binary(
    name = "py",
    srcs = glob(
        include = ["*.py"],
        exclude = ["test_*.py"],
    ),
    main = "__init__.py",  # hack
    visibility = [
        "//pydeps/private:__subpackages__",
    ],
    deps = [requirement("libcst")],
)

pytest_test(
    name = "test_python_module",
    srcs = ["test_python_module.py"],
    deps = [
        ":py",
        requirement("pytest"),
    ],
)

pytest_test(
    name = "test_python_source",
    srcs = ["test_python_source.py"],
    deps = [
        ":py",
        requirement("pytest"),
    ],
)

pytest_test(
    name = "test_source_files",
    srcs = ["test_source_files.py"],
    deps = [
        ":py",
        requirement("pytest"),
    ],
)
